Button alignments fix and refactor

--- a/src/EPR.Calculator.Frontend/wwwroot/css/styles.css
+++ b/src/EPR.Calculator.Frontend/wwwroot/css/styles.css
@@ -101,6 +101,12 @@
     width: 350px !important;
 }
 
+
+.align-button {
+    display: flex;
+    gap: 1rem;
+}
+
 .accept-button {
     background-color: #ffffff;
     border: 1px solid #00703c;
